style_flex.css
@keyframes fadeIn {
	from {
		opacity: 0;
		transform: translate3d(0, -20%, 0);
	}
	to {
		opacity: 1;
		transform: translate3d(0, 0, 0);
	}
}

@font-face{
	font-family: "Raleway";
	src: url('./fonts/Raleway-Medium.ttf') format('truetype');
	font-weight: normal;
	font-style: normal;
}

@font-face{
	font-family: "Raleway";
	src: url('./fonts/Raleway-MediumItalic.ttf') format('truetype');
	font-weight: normal;
	font-style: italic;
}
/*
@font-face{
	font-family: "Raleway";
	src: url('./fonts/Raleway-MediumRegular.ttf') format('truetype');
	font-weight: normal;
	font-style: normal;
}
*/

@font-face{
	font-family: "Raleway";
	src: url('./fonts/Raleway-MediumItalic.ttf') format('truetype');
	font-weight: 600;
	font-style: normal;
}

@font-face{
	font-family: "Raleway";
	src: url('./fonts/Raleway-MediumItalic.ttf') format('truetype');
	font-weight: 600;
	font-style: italic;
}

@font-face{
	font-family: "Raleway";
	src: url('./fonts/Raleway-MediumItalic.ttf') format('truetype');
	font-weight: 300;
	font-style: normal;
}
@font-face{
	font-family: "Raleway";
	src: url('./fonts/Raleway-MediumItalic.ttf') format('truetype');
	font-weight: 300;
	font-style: italic;
}
@font-face{
	font-family: "Raleway";
	src: url('./fonts/Raleway-MediumItalic.ttf') format('truetype');
	font-weight: 100;
	font-style: normal;
}
@font-face{
	font-family: "Raleway";
	src: url('./fonts/Raleway-MediumItalic.ttf') format('truetype');
	font-weight: 100;
	font-style: italic;
}
@font-face{
	font-family: "Raleway";
	src: url('./fonts/Raleway-MediumItalic.ttf') format('truetype');
	font-weight: bold;
	font-style: normal;
}
@font-face{
	font-family: "Raleway";
	src: url('./fonts/Raleway-MediumItalic.ttf') format('truetype');
	font-weight: bold;
	font-style: italic;
}

@font-face{
	font-family: "Raleway";
	src: url('./fonts/Raleway-MediumItalic.ttf') format('truetype');
	font-weight: 800;
	font-style: normal;
}
@font-face{
	font-family: "Raleway";
	src: url('./fonts/Raleway-MediumItalic.ttf') format('truetype');
	font-weight: 800;
	font-style: italic;
}

@font-face{
	font-family:"Dai Banna SIL";
	src: url('./fonts/dbsillo.ttf');
	font-style: italic;
}

body {
	margin: 0;
	overflow-y: hidden;
}

h1 {
	margin: 0;
	font-family:"Dai Banna SIL";
	font-style: italic;
	color: #7b6e4b;
}

h2 {
	font-family:"Dai Banna SIL";
	font-style: italic;
	color: #7b6e4b;
}

h3 {
	color: #7b6e4b;
}

img {
	max-width: 30%;
    margin-left: 10%;
    margin-top: 5%;
}

p {
	font-family: Raleway;
    color: #7b6e4b;
    font-weight: normal;
    margin: 0;
}

/* 
Loading screen 
*/
.lds-dual-ring {
  display: inline-block;
  width: 64px;
  height: 64px;
  position: absolute;
  z-index:20;

  top: 59px;
  left: 20px;
}

.lds-dual-ring:after {
  content: " ";
  display: block;
  width: 46px;
  height: 46px;
  margin: 1px;
  border-radius: 50%;
  border: 5px solid #fff;
  border-color: #fff transparent #fff transparent;
  animation: lds-dual-ring 1.2s linear infinite;
  color: #129660;
}
@keyframes lds-dual-ring {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}


/* end loading screen */

#loading_screen{
	width: 100vw;
	height: 100vh;
	
}

#horiz_container{
	display:flex;
	flex-wrap: nowrap;
	overflow-x: auto;
	-webkit-overflow-scrolling: touch;
 &::-webkit-scrollbar {
    display: none;
  }
}

#first_section{
	flex: 0 0 auto;
	display: inline-block;
	background-image: url('./img/newcomb_bg.jpeg');
    background-size: cover;
	background-attachment: fixed;
/*	height: 100vh;*/
	width: 80%;
	display: flex;
    /* justify-content: flex-end; */
    justify-content: center;
}

#second_section{
	flex: 0 0 auto;
	display: inline-block;
	background-image: linear-gradient(to right, rgba(0, 0, 0, 0.0), #dfd8c0),url(./img/newcomb_bg.jpeg);
	/* background-image: url('./img/newcomb_bg.jpeg'); */ 
	height: 100vh;
    /*(width: calc(100% - 15px); */
    background-size: cover;
    /* transform: rotateX(180deg); */
    background-attachment: fixed;
    z-index: -1;
    position: fixed;
    width: 100vw;
}

#footer{
    margin-left: 10%;
}

.leader_logo{
	max-width: 100%;
}

.brand_id{
	align-self: center;
	margin-right: 2%;
	/* position: absolute; */
}

.green_bar{
	height: 100vh;
	background-color: #129660;
	width: 75px;
	display: inline-block;
	flex: 0 0 auto;
	z-index: 2;
}

.green_bar_post{
	height: 100vh;
	width: 15px;
	background-color: #5eb246;
	display: inline-block;
	flex: 0 0 auto;
	z-index: 2;
}

.swipe_indicator{
    background-color: #60b03a;
    width:50px;
	height:200px;
	/* clip-path: polygon(50% 0%, 100% 50%, 50% 100%); */
	clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 75% 50%);
	-webkit-clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 75% 50%);
	/* margin-top: calc(50vh - 100px); */
	margin-right: 20px;
	/*margin-left: calc(100% - 70px);*/
    align-self: center;
    margin-top: calc(50vh - 100px);
	transform: translate(20vh,50vh);
}

.swipe_buffer{
	opacity: 0.4;
    flex: 0 0 auto;
    width: 100vw;
    overflow-x: scroll;
    overflow-y: hidden;
    white-space: nowrap;
}

.second_section_text{
    width: 60%;
    margin-left: 10%;	
}

.fadeInAnim{
	animation: fadeIn 2s ease-in both;
}



.image_text_text{
	display: inline-block;
	margin: 0;
}

.image_text_text > h2{
    display: inline-block;
    margin: 0;
}

.image_text_text > h3{
	display: inline-block;
    margin: 0;
}

@keyframes fadeIn {
	from {
		opacity: 0;
		/* transform: translate3d(0, -20%, 0);*/
		transform: translate(0, -20%);
	}
	to {
		opacity: 1;
		/* transform: translate3d(0, 0, 0); */
		transform: translate(0, 0);
	}
}

@supports (-ms-ime-align:auto) { 
	.swipe_indicator { 
	    background-color: transparent;
}

